tests/data/disable-ipv6-ingress/standard/disable-ipv6-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: disable-ipv6-setup-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - disable-ipv6-setup.example.com
    secretName: disable-ipv6-setup-secret
  rules:
  - host: disable-ipv6-setup.example.com
    http:
      paths:
      - path: /backend2
        pathType: Prefix
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
